# learn

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  portfolio.yaml.example  pyproject.toml  tsconfig.json  voice.yaml  voice.yaml.example
.github/workflows/: daily-digest.yml  linkedin-daily-draft.yml  linkedin-publish.yml  linkedin-weekly-draft.yml
docs/: LINKEDIN_AGENT.md
prisma/: schema.prisma
scripts/: check-node-version.mjs
src/: app.ts  config.ts  index.ts  logger.ts
src/jira/: jiraClient.ts
src/linkedin_agent/: __init__.py  config.py  email_preview.py  formatter.py  github_issue.py  linkedin_client.py  main.py  models.py  oauth_helper.py  ranker.py  search.py  signed_url.py  writer.py
src/llm/: extractor.ts
src/routes/: health.ts
src/services/: idempotencyService.ts  issueOrchestrator.ts  jiraDescriptionFormatter.ts  threadLinkService.ts
src/slack/: commandParser.ts  slackApp.ts  threadService.ts
src/stock_agent/: __init__.py  config.py  digest.py  main.py  models.py  scheduler.py
tests/: commandParser.edge.test.ts  commandParser.test.ts  config.edge.test.ts  jiraDescriptionFormatter.edge.test.ts  jiraDescriptionFormatter.test.ts  test_config.py  test_digest.py  test_models.py  test_notifiers.py  test_price_monitor.py  test_summarizer.py  threadService.edge.test.ts  threadService.test.ts
tests/linkedin_agent/: test_email_preview.py  test_formatter.py  test_github_issue.py  test_linkedin_client.py  test_models.py  (+4 more)
worker/: README.md  package.json  tsconfig.json  wrangler.toml
(+10 files in other folders)
